--- a/packages/web-client/index.html
+++ b/packages/web-client/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Escape the Chasm</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&display=swap');
+      </style>
   </head>
   <body>
     <div id="root"></div>
